[hat] Improving CUDA codegen for tensors